Fixed alignment for Let's create a story in input field for Firefox 14

--- a/src/main/webapp/scss/components/field.scss
+++ b/src/main/webapp/scss/components/field.scss
@@ -167,6 +167,7 @@
             padding: 10px;
             width: 505px;
             display: table-cell;
+            vertical-align: top;
             .field-row{
                 margin-bottom: 10px;
                 label{
